Update simio and small improvements
