# citizens_dwh_api/handlers/api/citizens_presents_handler.py
@@ -6,7 +6,7 @@ from citizens_dwh_api.handlers.utils import get_json_response
 
 
 @route("/imports/{import_id}/citizens/stat/birthdays")
-class CitizensPresentsHandlerDao(DaoApiHandler):
+class CitizensPresentsHandler(DaoApiHandler):
     async def get(self, import_id: str) -> web.Response:
         percentile_stats = await self.dao.get_presents_stat(import_id)
         return get_json_response(percentile_stats)
